link to unit tests

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div class="row">
         <div class="col-md-4">
-
+            <a href="qunit.html">Did I think about the logic correctly? (Unit Tests)</a>
 
         </div>
         <div class="col-md-4">
