--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <meta property="og:url" content="http://fabioalmeida.net/app/geradorcpfcnpj">
     <meta property="og:title" content="Formatar, gerar e validar  CPF e CNPJ">
-    <meta property="og:description" content="Um gerador de cpf e cnpj">
+    <meta property="og:description" content="Formatador, validdor e gerador de cpf e cnpj">
     <meta property="og:image" content="https://muut.com/common/img/og.jpg">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>CPF\CNPJ Gerador e Validador</title>
+    <title>CPF\CNPJ Formatador, Gerador e Validador</title>
 
     <!-- Bootstrap -->
     <link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
